--- a/Makefile.vc
+++ b/Makefile.vc
@@ -23,18 +23,19 @@ If cl.exe is in your PATH rerun nmake with ARCH=<arch>.
 !ENDIF
 
 !IF "$(ARCH)" == "x86"
-PLATFORM_LDFLAGS = /SAFESEH
+PLATFORM_LDFLAGS = 
 !ENDIF
 
 #############################################################
 ## Nothing more to do below this line!
 
 NOLOGO     = /nologo
-CCNODBG    = cl.exe $(NOLOGO) /O2 /DNDEBUG
+CCNODBG    = cl.exe $(NOLOGO) /O2 /Oy- /DNDEBUG
 CCDEBUG    = cl.exe $(NOLOGO) /Od /Zi /D_DEBUG /RTC1
 CFLAGS     = /I. /Isrc $(NOLOGO) /MP /W3 /EHsc /c
-CFLAGS     = $(CFLAGS) /DWIN32 /D_CRT_SECURE_NO_WARNINGS /DWIN32_LEAN_AND_MEAN
-LDFLAGS    = /LARGEADDRESSAWARE /MANIFEST:EMBED /NXCOMPAT /DYNAMICBASE
+CFLAGS     = $(CFLAGS) /DWIN32 /D_CRT_SECURE_NO_WARNINGS /DWIN32_LEAN_AND_MEAN -DWINVER=0x0500 -D_WIN32_WINNT=0x0400 -DWIN32_IE=0x0400
+LDFLAGS    = /LARGEADDRESSAWARE
+# LDFLAGS  = /LARGEADDRESSAWARE /MANIFEST:EMBED /NXCOMPAT /DYNAMICBASE
 LDFLAGS    = $(LDFLAGS) $(PLATFORM_LDFLAGS)
 LNKDLL     = link.exe /DLL $(NOLOGO)
 LNKEXE     = link.exe $(NOLOGO)
@@ -45,7 +46,7 @@ RCDEBUG    = $(RCNODBG) /D_DEBUG
 !IF "$(ARCH)" == "ARM"
 CFLAGS = $(CFLAGS) /DWINAPI_FAMILY=WINAPI_FAMILY_PHONE_APP /DWEBP_USE_THREAD
 !ELSE
-CFLAGS = $(CFLAGS) /DHAVE_WINCODEC_H /DWEBP_USE_THREAD
+CFLAGS = $(CFLAGS) /DWEBP_USE_THREAD
 !ENDIF
 
 CFGSET     = FALSE
@@ -509,7 +510,7 @@ $(DIROBJ)\examples\gifdec.obj: examples\gifdec.c
 {src\utils}.c{$(DIROBJ)\utils}.obj::
 	$(CC) $(CFLAGS) /Fd$(LIBWEBP_PDBNAME) /Fo$(DIROBJ)\utils\ $<
 
-LNKLIBS     = ole32.lib windowscodecs.lib shlwapi.lib
+LNKLIBS     = ole32.lib shlwapi.lib
 !IF "$(UNICODE)" == "1"
 LNKLIBS     = $(LNKLIBS) Shell32.lib
 !ENDIF
